Fixed the UI bug in registration form: - removed .form__select overflow - extracted .form__select to the new component - wrote styles for .form__options-list - wrote dropdown logic for .form__select

--- a/client/src/scss/base/_reset.scss
+++ b/client/src/scss/base/_reset.scss
@@ -9,6 +9,7 @@
   margin: 0;
   padding: 0;
   border: none;
+	outline: none;
 }
 
 ul,
@@ -20,8 +21,8 @@ ol {
 button,
 input {
   background: none;
-  border: none;
-  outline: none;
+  color: inherit;
+  font-family: inherit;
 }
 
 legend {
