--- a/client/src/scss/components/_form.scss
+++ b/client/src/scss/components/_form.scss
@@ -4,7 +4,8 @@
 }
 
 .form {
-  min-width: min(500px, 100vw);
+  width: min(500px, 100vw);
+
   position: absolute;
   top: 50%;
   left: 50%;
@@ -65,6 +66,59 @@
     font-size: 1rem;
     padding: 0.75em;
     border-radius: 0.2em;
+  }
+
+  &__inputs-group {
+    display: flex;
+    gap: 1rem;
+  }
+
+  &__select {
+    @extend .form__input;
+
+    position: relative;
+
+    flex-grow: 1;
+
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    gap: 4px;
+
+    input {
+      color: var(--lightest-cl);
+      font-size: 1rem;
+      width: 100%;
+
+      &::placeholder {
+        opacity: 1;
+        color: var(--lightest-cl);
+      }
+    }
+  }
+
+  &__options-list {
+    position: absolute;
+    top: 0;
+    left: 0;
+    translate: 0 -100%;
+
+    width: 100%;
+    height: 200px;
+    overflow: auto;
+
+    background-color: var(--main-cl);
+
+    li {
+      padding: 0.75em;
+      background-color: var(--main-cl);
+      cursor: pointer;
+      transition: 0.3s;
+
+      &:hover {
+        background-color: var(--light-cl);
+      }
+    }
   }
 
   &__link {
